Fixed issue where submit button was huge on mobile

--- a/elements/my-claims/my-claims.css
+++ b/elements/my-claims/my-claims.css
@@ -10,6 +10,7 @@
 }
 #paper_button {
   background-color: rgb(241, 92, 34);
+  max-height: 40px;
 }
 #paper_slider {
   width: 100%;
